# easy-json-view

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE  PROJECT_STATUS.md  README.md  README.zh-CN.md  build-desktop.sh  build-icons.sh  build-web.sh  gitignore.example  index.html  tailwind.config.js
.github/workflows/: build.yml
assets/: input.css  tailwind.css
benches/: json_performance.rs
docs/: BUILD.md  dev-phrase.md  dev-plan.md  requirement.md
locales/: en.yml  zh-CN.yml
prototype/: Easy Json View 升级说明.md  EazyJsonView 升级说明.md  index.html
src/: app.rs  lib.rs  main.rs  tests.rs
src/platform/: desktop.rs  mod.rs  web.rs
src/services/: mod_enhanced.rs
tests/: desktop_storage.rs
